update template for compiled js

--- a/demos-processingjs/template/index.html
+++ b/demos-processingjs/template/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <canvas id="sketch"></canvas>
-<script src="sketch.js"></script>
+<script src="sketch-compiled.js"></script>
 </body>
 </html>
